--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,7 +104,7 @@ hyper-tls = "0.5"
 into_other = { path = "components/into_other", default-features = false }
 itertools = "0.10"
 keys = { path = "components/keys", default-features = false }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.3"
 libc = "0.2"
 libloading = "0.7"
