--- a/components/cdc/Cargo.toml
+++ b/components/cdc/Cargo.toml
@@ -42,7 +42,7 @@ futures-timer = "3.0"
 getset = "0.1"
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 keys = { path = "../keys" }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.3"
 log_wrappers = { path = "../log_wrappers" }
 online_config = { path = "../online_config" }
