--- a/components/cloud/Cargo.toml
+++ b/components/cloud/Cargo.toml
@@ -9,7 +9,7 @@ async-trait = "0.1"
 derive_more = "0.99.3"
 error_code = { path = "../error_code", default-features = false }
 futures-io = "0.3"
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.3"
 openssl = "0.10"
 prometheus = { version = "0.13", default-features = false, features = ["nightly"] }
