--- a/components/concurrency_manager/Cargo.toml
+++ b/components/concurrency_manager/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.0.1"
 
 [dependencies]
 fail = "0.5"
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 parking_lot = "0.12"
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["macros", "sync", "time"] }
