--- a/components/encryption/Cargo.toml
+++ b/components/encryption/Cargo.toml
@@ -21,7 +21,7 @@ file_system = { path = "../file_system", default-features = false }
 futures = "0.3"
 futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
 hex = "0.4.2"
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.3"
 online_config = { path = "../online_config" }
 openssl = "0.10"
