--- a/components/error_code/Cargo.toml
+++ b/components/error_code/Cargo.toml
@@ -14,7 +14,7 @@ path = "bin.rs"
 
 [dependencies]
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.3"
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 serde = { version = "1.0", features = ["derive"] }
