--- a/components/raft_log_engine/Cargo.toml
+++ b/components/raft_log_engine/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 encryption = { path = "../encryption" }
 engine_traits = { path = "../engine_traits", default-features = false }
 file_system = { path = "../file_system" }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.4.0"
 num_cpus = "1"
 online_config = { path = "../online_config" }
