--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -55,7 +55,7 @@ grpcio-health = { version = "0.10", default-features = false, features = ["proto
 into_other = { path = "../into_other", default-features = false }
 itertools = "0.10"
 keys = { path = "../keys", default-features = false }
-kvproto = { git = "https://github.com/pingcap/kvproto.git" }
+kvproto = { git = "https://github.com/ekexium/kvproto.git", branch = "pessimistic-lock-type" }
 lazy_static = "1.3"
 log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
 log_wrappers = { path = "../log_wrappers" }
