--- a/components/kvengine/Cargo.toml
+++ b/components/kvengine/Cargo.toml
@@ -31,6 +31,7 @@ hyper = "0.14"
 kvenginepb = { path = "../kvenginepb", default-features = false }
 lazy_static = "1.3"
 libc = "0.2"
+log_wrappers = { path = "../log_wrappers" }
 lz4 = "1.23.1"
 moka = "0.8"
 num_cpus = "1"
@@ -49,6 +50,7 @@ slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debu
 slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
 slog-term = "2.4"
 thiserror = "1.0"
+tidb_query_common = { path = "../tidb_query_common", default-features = false }
 tikv_alloc = { path = "../tikv_alloc" }
 tikv_util = { path = "../tikv_util", default-features = false }
 tokio = { version = "1.5", features = ["full"] }
