--- a/components/raftstore/Cargo.toml
+++ b/components/raftstore/Cargo.toml
@@ -91,6 +91,11 @@ txn_types = { path = "../txn_types", default-features = false }
 uuid = { version = "0.8.1", features = ["serde", "v4"] }
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
+[dependencies.rocksdb]
+git = "https://github.com/tikv/rust-rocksdb.git"
+package = "rocksdb"
+features = ["encryption"]
+
 [dev-dependencies]
 encryption_export = { path = "../encryption/export", default-features = false }
 engine_panic = { path = "../engine_panic", default-features = false }
