--- a/components/raftstore-v2/Cargo.toml
+++ b/components/raftstore-v2/Cargo.toml
@@ -38,6 +38,7 @@ fail = "0.5"
 futures-util = { version = "0.3", features = ["compat"] }
 kvproto = { git = "https://github.com/pingcap/kvproto.git" }
 pd_client = { path = "../pd_client" }
+protobuf = { version = "2.8", features = ["bytes"] }
 raft = { version = "0.7.0", default-features = false, features = ["protobuf-codec"] }
 raft-proto = { version = "0.7.0" }
 raftstore = { path = "../raftstore" }
@@ -56,3 +57,7 @@ test_util = { path = "../test_util" }
 name = "raftstore-v2-failpoints"
 path = "tests/failpoints/mod.rs"
 required-features = ["failpoints"]
+
+[[test]]
+name = "raftstore-v2-integrations"
+path = "tests/integrations/mod.rs"
