--- a/Cargo.toml
+++ b/Cargo.toml
@@ -209,6 +209,9 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # [patch.'https://github.com/pingcap/kvproto']
 # kvproto = {git = "https://github.com/your_github_id/kvproto", branch="your_branch"}
 
+[patch.'https://github.com/pingcap/kvproto']
+kvproto = { git = "https://github.com/sticnarf/kvproto", branch="commit-raft-command" }
+
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
 # Without resolver = 2, using `cargo build --features x` to build `cmd`
