--- a/components/backup-stream/Cargo.toml
+++ b/components/backup-stream/Cargo.toml
@@ -8,7 +8,7 @@ default = ["test-engine-kv-rocksdb", "test-engine-raft-raft-engine"]
 test-engine-kv-rocksdb = ["tikv/test-engine-kv-rocksdb"]
 test-engine-raft-raft-engine = ["tikv/test-engine-raft-raft-engine"]
 test-engines-rocksdb = ["tikv/test-engines-rocksdb"]
-failpoints = ["tikv/failpoints", "fail/failpoints", "fail"]
+failpoints = ["tikv/failpoints", "fail/failpoints"]
 backup-stream-debug = []
 
 [[test]]
@@ -32,7 +32,7 @@ error_code = { path = "../error_code" }
 etcd-client = { version = "0.7", features = ["pub-response-field", "tls"] }
 external_storage = { path = "../external_storage", default-features = false }
 external_storage_export = { path = "../external_storage/export", default-features = false }
-fail = { version = "0.5", optional = true }
+fail = "0.5"
 file_system = { path = "../file_system" }
 futures = "0.3"
 futures-io = "0.3"
