--- a/components/tikv_util/Cargo.toml
+++ b/components/tikv_util/Cargo.toml
@@ -22,7 +22,7 @@ crossbeam = "0.8"
 derive_more = "0.99.3"
 error_code = { path = "../error_code", default-features = false }
 fail = "0.5"
-futures = { version = "0.3", features = ["compat", "thread-pool"] }
+futures = { version = "0.3", features = ["compat"] }
 futures-util = { version = "0.3", default-features = false, features = ["io"] }
 grpcio = { version = "0.10", default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
 http = "0.2.0"
@@ -55,7 +55,6 @@ time = "0.1"
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 tokio-executor = "0.1"
 tokio-timer = { git = "https://github.com/tikv/tokio", branch = "tokio-timer-hotfix" }
-tracker = { path = "../tracker" }
 url = "2"
 yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
