--- a/Cargo.toml
+++ b/Cargo.toml
@@ -179,10 +179,10 @@ yatp = { git = "https://github.com/tikv/yatp.git", branch = "master" }
 
 [dev-dependencies]
 api_version = { workspace = true, features = ["testexport"] }
-example_plugin = { workspace = true } # should be a binary dependency
 hyper-openssl = "0.9"
 panic_hook = { workspace = true }
 reqwest = { version = "0.11", features = ["blocking"] }
+test_coprocessor_plugin = { workspace = true } # should be a binary dependency
 test_sst_importer = { workspace = true }
 test_util = { workspace = true }
 tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "time"] }
@@ -258,10 +258,12 @@ members = [
   "components/online_config",
   "components/panic_hook",
   "components/pd_client",
+  "components/profiler",
   "components/raftstore",
   "components/raftstore-v2",
   "components/resolved_ts",
   "components/resource_metering",
+  "components/security",
   "components/server",
   "components/snap_recovery",
   "components/sst_importer",
@@ -281,6 +283,7 @@ members = [
   "components/tidb_query_executors",
   "components/tidb_query_expr",
   "components/tikv_alloc",
+  "components/tikv_kv",
   "components/tikv_util",
   "components/tipb_helper",
   "components/tracker",
@@ -295,6 +298,8 @@ default-members = ["cmd/tikv-server", "cmd/tikv-ctl"]
 
 [workspace.dependencies]
 api_version = { path = "components/api_version", default-features = false }
+aws = { path = "components/cloud/aws", default-features = false }
+azure = { path = "components/cloud/azure", default-features = false }
 backup = { path = "components/backup", default-features = false }
 backup-stream = { path = "components/backup-stream", default-features = false }
 batch-system = { path = "components/batch-system", default-features = false }
@@ -302,9 +307,6 @@ case_macros = { path = "components/case_macros", default-features = false }
 causal_ts = { path = "components/causal_ts", default-features = false }
 cdc = { path = "components/cdc", default-features = false }
 cloud = { path = "components/cloud", default-features = false }
-aws = { path = "components/cloud/aws", default-features = false }
-azure = { path = "components/cloud/azure", default-features = false }
-gcp = { path = "components/cloud/gcp", default-features = false }
 codec = { path = "components/codec", default-features = false }
 collections = { path = "components/collections", default-features = false }
 concurrency_manager = { path = "components/concurrency_manager", default-features = false }
@@ -321,6 +323,7 @@ error_code = { path = "components/error_code", default-features = false }
 external_storage = { path = "components/external_storage", default-features = false }
 external_storage_export = { path = "components/external_storage/export", default-features = false }
 file_system = { path = "components/file_system", default-features = false }
+gcp = { path = "components/cloud/gcp", default-features = false }
 into_other = { path = "components/into_other", default-features = false }
 keys = { path = "components/keys", default-features = false }
 log_wrappers = { path = "components/log_wrappers", default-features = false }
@@ -328,11 +331,13 @@ memory_trace_macros = { path = "components/memory_trace_macros", default-feature
 online_config = { path = "components/online_config", default-features = false }
 panic_hook = { path = "components/panic_hook", default-features = false }
 pd_client = { path = "components/pd_client", default-features = false }
+profiler = { path = "components/profiler", default-features = false }
 raft_log_engine = { path = "components/raft_log_engine", default-features = false }
 raftstore = { path = "components/raftstore", default-features = false }
 raftstore_v2 = { path = "components/raftstore-v2", default-features = false }
 resolved_ts = { path = "components/resolved_ts", default-features = false }
 resource_metering = { path = "components/resource_metering", default-features = false }
+security = { path = "components/security", default-features = false }
 server = { path = "components/server", default-features = false }
 snap_recovery = { path = "components/snap_recovery", default-features = false }
 sst_importer = { path = "components/sst_importer", default-features = false }
@@ -351,17 +356,13 @@ tidb_query_common = { path = "components/tidb_query_common", default-features = 
 tidb_query_datatype = { path = "components/tidb_query_datatype", default-features = false }
 tidb_query_executors = { path = "components/tidb_query_executors", default-features = false }
 tidb_query_expr = { path = "components/tidb_query_expr", default-features = false }
+tikv = { path = ".", default-features = false }
 tikv_alloc = { path = "components/tikv_alloc", default-features = false }
+tikv_kv = { path = "components/tikv_kv", default-features = false }
 tikv_util = { path = "components/tikv_util", default-features = false }
 tipb_helper = { path = "components/tipb_helper", default-features = false }
 tracker = { path = "components/tracker", default-features = false }
 txn_types = { path = "components/txn_types", default-features = false }
-security = { path = "components/security", default-features = false }
-tikv_kv = { path = "components/tikv_kv", default-features = false }
-example_plugin = { path = "components/test_coprocessor_plugin/example_plugin", default-features = false }
-tikv = { path = ".", default-features = false }
-profiler = { path = "components/profiler", default-features = false }
-fuzz-targets = { path = "fuzz/targets", default-features = false }
 
 [profile.dev.package.grpcio-sys]
 debug = false
