--- a/Cargo.toml
+++ b/Cargo.toml
@@ -209,7 +209,7 @@ procinfo = { git = "https://github.com/tikv/procinfo-rs", rev = "6599eb9dca74229
 # [patch.'https://github.com/pingcap/kvproto']
 # kvproto = { git = "https://github.com/your_github_id/kvproto", branch="your_branch" }
 [patch.'https://github.com/pingcap/kvproto']
-kvproto = { git = "https://github.com/iosmanthus/kvproto", branch = "keyspace-forward-compat" }
+kvproto = { git = "https://github.com/tidbcloud/kvproto", branch = "keyspace-forward-compat" }
 
 [workspace]
 # See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
