--- a/components/server/Cargo.toml
+++ b/components/server/Cargo.toml
@@ -78,6 +78,7 @@ tempfile = "3.0"
 tikv = { workspace = true }
 tikv_alloc = { workspace = true }
 tikv_util = { workspace = true }
+tracker = { path = "../tracker" }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
 toml = "0.5"
 txn_types = { workspace = true }
