--- a/gen-proxy-ffi/Cargo.toml
+++ b/gen-proxy-ffi/Cargo.toml
@@ -17,7 +17,4 @@ path = "bin.rs"
 # md5 = ""
 clap = "2.33.0"
 walkdir = "2"
-
-[dependencies.bindgen]
-version = "0.57.0"
-default-features = false
+bindgen = { version = "0.57.0", default-features = true }
