--- a/components/test_storage/Cargo.toml
+++ b/components/test_storage/Cargo.toml
@@ -23,6 +23,7 @@ test-engines-panic = [
 [dependencies]
 api_version = { workspace = true }
 collections = { workspace = true }
+engine_rocks = { workspace = true }
 engine_test = { workspace = true }
 engine_traits = { workspace = true }
 futures = "0.3"
